PP-01 Create index.html also the login and sign up pages

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,71 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+<div class="jumbotron" style="text-align:center">
+  <h1>A buena hora!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/bag1.png" alt="promo"><br>
+    Bienvenido a Promo App. Con esta aplicación podrás crear una de las mejores estrategias de mercado para tu empresa, ofreciendote mayor probabilidad de obtener 
+      clientes con relación a las promociones que ingreses, además de darte la posibilidad de decirte cuál es el mercado que le interesa más tus productos gracias
+      a un sistema de recomendación que le mostrará a los usuarios sólo las promociones que le interesen de acuerdo a su edad, género y gustos personales.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+          	<h3><i class="fa fa-angle-right"></i>Nuestras suscripciones</h3>
+          	<div class="row mt">
+          		<div class="col-lg-12">
+    
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+					<! -- ROW OF PANEL -->
+					<div class="row">
+						
+						<!-- Suscripcion 1 -->
+						<div class="col-lg-4 col-md-4 col-sm-4 mb">
+                           <!-- {{awesomeThings[0]}} -->
+							<div class="weather-3 pn centered">
+								<i class="fa fa-sun-o"></i>
+								<h1>Standard</h1>
+								<div class="info">
+									<div class="row">
+								        <h3 class="centered">$10.000</h3>
+										<div class="col-sm-12 col-xs-12">
+											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>No permite acceso a plataforma de marketing la cual facilita información estadística, pero puede ingresar 2 promociones.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div><! --/col-md-4 -->
+                        
+                        <!-- Suscripcion 2 -->
+						<div class="col-lg-4 col-md-4 col-sm-4 mb">
+							<div class="weather-3 pn centered">
+								<i class="fa fa-sun-o"></i>
+								<h1>Profesional</h1>
+								<div class="info">
+									<div class="row">
+								        <h3 class="centered">$30.000</h3>
+										<div class="col-sm-12 col-xs-12">
+											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>Acceso a la plataforma de marketing, así como a 5 categorias y                                                podrá ingresar hasta 10 promociones. </p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div><! --/col-md-4 -->
+                        
+                        <!-- Suscripcion 3 -->
+						<div class="col-lg-4 col-md-4 col-sm-4 mb">
+							<div class="weather-3 pn centered">
+								<i class="fa fa-sun-o"></i>
+								<h1>Premium</h1>
+								<div class="info">
+									<div class="row">
+								        <h3 class="centered">$50.000</h3>
+										<div class="col-sm-12 col-xs-12">
+											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>Tendrá acceso a la plataforma de marketing, a todas las                                                           categorías y podrá ingresar hasta 20  productos en promoción.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div><! --/col-md-4 -->
+					</div><!-- /END ROW OF PANEL -->
+					
+          		</div>
+          	</div>
