PP-01 Create more views, including the add-product view and the create-shop

--- a/app/views/sign-up.html
+++ b/app/views/sign-up.html
@@ -4,11 +4,13 @@
 		      <form class="form-login" action="index.html">
 		        <h2 class="form-login-heading">Registrate</h2>
 		        <div class="login-wrap">
-		            <input type="text" class="form-control" placeholder="Correo electrónico" autofocus required>
+		            <input type="email" class="form-control" placeholder="Correo electrónico" name="email" autofocus required>
 		            <br>
-		            <input type="password" class="form-control" placeholder="Contraseña" required>
+                    <input type="tel" class="form-control" placeholder="Teléfono de contacto" name="tel" autofocus>
+		            <br>
+		            <input type="password" class="form-control" placeholder="Contraseña" name="password" required>
                     <br>
-                    <input type="password" class="form-control" placeholder="Vuelve a introducir Contraseña" required>
+                    <input type="password" class="form-control" placeholder="Vuelve a introducir Contraseña" name="password-confirm" required>
                     <br>
 		            <button class="btn btn-theme btn-block" ng-href="" type="submit"><i class="fa fa-lock"></i> Terminar</button>
                     <hr>
