PP-01 Add the subscription view and modify other files with no major changes

--- a/app/views/create-shop.html
+++ b/app/views/create-shop.html
@@ -20,7 +20,7 @@
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Imagen logo</label>
                               <div class="col-sm-6">
-                                  <input type="file" accept="image/*" class="form-control" name="description">
+                                  <input type="file" accept="image/*" class="form-control" name="shop-description">
                               </div>
                           </div>
                           <!--Description-->
