--- a/app/views/subscription.html
+++ b/app/views/subscription.html
@@ -1,1 +1,69 @@
-<p>This is the subscription view.</p>
+
+<h3><i class="fa fa-angle-right"></i> Puedes suscribrite a </h3>
+<div class="row mt">
+    <div class="col-lg-12">
+
+        <! -- 2ND ROW OF PANELS -->
+        <div class="row">
+            <! -- STANDARD -->
+            <div class="col-lg-4 col-md-4 col-sm-4 mb">
+                <div class="content-panel pn">
+                    <div id="profile-standard">
+
+                    </div>
+                    <div class="profile-01 centered">
+                        <p>STANDARD</p>
+                    </div>
+                    <div class="centered">
+                        <h4>$10.000</h4>
+                    </div>
+                </div><! --/content-panel -->
+                
+            </div><! --/col-md-4 -->
+
+            <! -- PRO -->
+            <div class="col-lg-4 col-md-4 col-sm-4 mb">
+                <div class="content-panel pn">
+                    <div id="profile-pro">
+                        <!--premium image-->
+                    </div>
+                    <div class="profile-01 centered">
+                        <p>PROFESIONAL</p>
+                    </div>
+                    <div class="centered">
+                        <h4>$30.000</h4>
+                    </div>
+                </div><! --/content-panel -->
+            </div><! --/col-md-4 -->
+
+            <! -- PREMIUM -->
+            <div class="col-lg-4 col-md-4 col-sm-4 mb">
+                <div class="content-panel pn">
+                    <div id="profile-premium">
+
+                    </div>
+                    <div class="profile-01 centered">
+                        <p>PREMIUM</p>
+                    </div>
+                    <div class="centered">
+                        <h4>$50.000</h4>
+                    </div>
+                </div><! --/content-panel -->
+            </div><! --/col-md-4 -->
+
+      
+    </div>
+</div>
+
+
+
+
+
+<script>
+//custom select box
+
+$(function(){
+$('select.styled').customSelect();
+});
+
+</script>
