--- a/app/views/add-product.html
+++ b/app/views/add-product.html
@@ -6,25 +6,25 @@
                   <div class="form-panel">
                   	  <h4 class="mb"><i class="fa fa-angle-right"></i> A continuación deberá llenar la información concerniente al producto que desea agregar</h4>
                       <form class="form-horizontal style-form" method="get">
+                          <!--Name-->
                           <div class="form-group">
-                              <!--Name-->
                               <label class="col-sm-2 col-sm-2 control-label">Nombre</label>
                               <div class="col-sm-6">
-                                  <input type="text" class="form-control" name="name" required>
+                                  <input type="text" class="form-control" name="name" required/>
                               </div>
                           </div>
                           <!--Description-->
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Descripción</label>
                               <div class="col-sm-6">
-                                  <textarea type="text" class="form-control" name="description" required></textarea>
+                                  <textarea type="text" class="form-control" name="description"></textarea>
                               </div>
                           </div>
                           <!--Price-->
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Precio</label>
                               <div class="col-sm-6">
-                                  <input type="number" class="form-control" name="price" required>
+                                  <input type="number" class="form-control" name="price" required/>
                                   <span class="help-block">No ingrese el signo pesos $, ni puntos ni comas. Ejm: 20000</span>
                               </div>
                           </div>
@@ -80,7 +80,7 @@
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Descuento</label>
                               <div class="col-sm-6">
-                                  <input type="number" class="form-control" name="discount" required>
+                                  <input type="number" class="form-control" name="discount" required/>
                                   <span class="help-block">No ingrese el signo de porcentaje %. Ejm: 25</span>
                               </div>
                           </div>
@@ -99,22 +99,33 @@
                                 </div><!--End div ExpirationDateCtrl-->
                               </div>
                           </div>
-
+                          <!--Location-->
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Locación</label>
+                              <div class="col-sm-6">
+                                  <input type="text" class="form-control" name="name" required/>
+                              </div>
+                          </div>
+                          <br/>
+                          <br/>
+                          <!--Cancel and ok buttons-->
+                            <div class="row">
+                                <div class="col-lg-4">
+                                </div>
+                                <div class="col-lg-2">
+                                    <button class="btn btn-default btn-block" ui-sref="login" type="submit" name="cancel"> Cancelar</button>
+                                </div>
+                                <div class="col-lg-2">
+                                    <button class="btn btn-theme btn-block" ui-sref="login" type="submit" name="accept"> Aceptar</button>
+                                </div>
+                                <div class="col-lg-4">
+                                </div>
+                            </div>    
                       </form>
                       
                       <!--Cancel & Ok buttons-->
-                    <div class="row">
-                        <div class="col-lg-4">
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-default btn-block" ui-sref="login" type="submit" name="cancel"><i class="fa fa-lock"></i> Cancelar</button>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-theme btn-block" ui-sref="login" type="submit" name="accept"><i class="fa fa-lock"></i> Aceptar</button>
-                        </div>
-                        <div class="col-lg-4">
-                        </div>
-                    </div>         
+
+     
                       
                   </div>
           		</div><!-- col-lg-12-->      	
