--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,7 +8,7 @@
 		            <br>
 		            <input type="password" class="form-control" placeholder="Contraseña">
                     <br>
-		            <button class="btn btn-theme btn-block" ui-sref="vendedor-home" type="submit"><i class="fa fa-lock"></i> Ingresar</button>
+		            <button class="btn btn-theme btn-block" ui-sref="create-shop" type="submit"><i class="fa fa-lock"></i> Ingresar</button>
                     <br>
 		        </div>
 		      </form>	  	
