PP-01 Modify the adress os fome files, also imclude the ui-bootstrap into the bower.json file

--- a/app/views/add-product.html
+++ b/app/views/add-product.html
@@ -113,10 +113,11 @@
                                 <div class="col-lg-4">
                                 </div>
                                 <div class="col-lg-2">
-                                    <button class="btn btn-default btn-block" ui-sref="login" type="submit" name="cancel"> Cancelar</button>
+                                    <!--If ui-sref is putted instead of ng-href, it wont ask to put the requiered textfields-->
+                                    <button class="btn btn-default btn-block" ng-href="login" type="submit" name="cancel"> Cancelar</button>
                                 </div>
                                 <div class="col-lg-2">
-                                    <button class="btn btn-theme btn-block" ui-sref="login" type="submit" name="accept"> Aceptar</button>
+                                    <button class="btn btn-theme btn-block" ng-href="login" type="submit" name="accept"> Aceptar</button>
                                 </div>
                                 <div class="col-lg-4">
                                 </div>
@@ -124,8 +125,6 @@
                       </form>
                       
                       <!--Cancel & Ok buttons-->
-
-     
                       
                   </div>
           		</div><!-- col-lg-12-->      	
