--- a/app/views/create-shop.html
+++ b/app/views/create-shop.html
@@ -37,22 +37,23 @@
                                   <input type="text" class="form-control" name="shop-location" required>
                               </div>
                           </div>
+                          
+                            <!--Cancel & Ok buttons-->
+                            <div class="row">
+                                <div class="col-lg-4">
+                                </div>
+                                <div class="col-lg-2">
+                                    <button class="btn btn-default btn-block" ui-sref="login" type="submit" name="cancel"><i class="fa fa-lock"></i> Cancelar</button>
+                                </div>
+                                <div class="col-lg-2">
+                                    <button class="btn btn-theme btn-block" ng-href="login" type="submit" name="accept"><i class="fa fa-lock"></i> Aceptar</button>
+                                </div>
+                                <div class="col-lg-4">
+                                </div>
+                            </div>  <!-- End Cancel & ok buttons -->   
 
                       </form>
-                      
-                      <!--Cancel & Ok buttons-->
-                    <div class="row">
-                        <div class="col-lg-4">
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-default btn-block" ui-sref="login" type="submit" name="cancel"><i class="fa fa-lock"></i> Cancelar</button>
-                        </div>
-                        <div class="col-lg-2">
-                            <button class="btn btn-theme btn-block" ui-sref="login" type="submit" name="accept"><i class="fa fa-lock"></i> Aceptar</button>
-                        </div>
-                        <div class="col-lg-4">
-                        </div>
-                    </div>         
+                          
                       
                   </div>
           		</div><!-- col-lg-12-->      	
