--- a/app/views/sign-up.html
+++ b/app/views/sign-up.html
@@ -12,7 +12,7 @@
                     <br>
                     <input type="password" class="form-control" placeholder="Vuelve a introducir Contraseña" name="password-confirm" required>
                     <br>
-		            <button class="btn btn-theme btn-block" ui-sref="login" type="submit"><i class="fa fa-lock"></i> Terminar</button>
+		            <button class="btn btn-theme btn-block" ng-href="login" type="submit"><i class="fa fa-lock"></i> Terminar</button>
                     <hr>
                     <div class="login-social-link centered">
                         <p>No necesitas adquirir una suscripción para crear una cuenta</p>
