--- a/app/views/subscription.html
+++ b/app/views/subscription.html
@@ -1,5 +1,6 @@
 
-<h3><i class="fa fa-angle-right"></i> Puedes suscribrite a </h3>
+<h3><i class="fa fa-angle-right"></i> Suscripciones </h3>
+<h5><i class="fa fa-angle-right"></i> Haz clic sobre el titulo la sa suscripción de tu interés para obtener más información </h5>
 <div class="row mt">
     <div class="col-lg-12">
 
@@ -49,12 +50,36 @@
                         <h4>$50.000</h4>
                     </div>
                 </div><! --/content-panel -->
-            </div><! --/col-md-4 -->
-
-      
+            </div><! --/col-md-4 -->   
+        </div>
+        <!-- Subscription Description -->
+         <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 mb">
+                    <div class="weather-2 pn">
+                        <div class="subscription-header weather-2-header">
+                            <div class="row">
+                                <div class="col-sm-6 col-xs-6">
+                                    <p>STANDARD</p>
+                                </div>
+                            </div>
+                        </div><!-- /weather-2 header -->
+                        <div class="row data">
+                            <div class="col-sm-6 col-xs-6 goleft">
+                                <h4><b>16 ºC</b></h4>
+                                <h6>21º max</h6>
+                                <h6>8º min</h6>
+                            </div>
+                            <div class="col-sm-6 col-xs-6 goright">
+                                <h5><i class="fa fa-sun-o fa-2x"></i></h5>
+                                <h6><b>Sunny</b></h6>
+                                <h5>7:15 am</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!--End Suscription description-->
     </div>
-</div>
-
+</div>   
 
 
 
