--- a/app/views/vendedor-home.html
+++ b/app/views/vendedor-home.html
@@ -29,7 +29,7 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu" id="nav-accordion">
               
-              	  <p class="centered"><a href="profile.html"><img src="assets/img/ui-sam.jpg" class="img-circle" width="60"></a></p>
+              	  <p class="centered"><a href="profile.html"><img src="" class="img-circle" width="60"></a></p>
               	  <h5 class="centered">Marcel Newman</h5>
               	  	
                   <li class="sub-menu"> <!-- antes decia class mt -->
@@ -76,7 +76,7 @@
       <!--footer start-->
       <footer class="site-footer sticky-footer">
           <div class="text-center">
-              Camila Cardona -Leonardo Celis - David Garay</br>2015
+              Camila Cardona -Leonardo Celis</br>2015
               <a ui-sref="vendedor-home" class="go-top">
                   <i class="fa fa-angle-up"></i>
               </a>
