PP-01 Create settings view and make some refactoring

--- a/app/views/add-product.html
+++ b/app/views/add-product.html
@@ -37,7 +37,7 @@
                           </div>
                           <!--Category-->
                           <div class="form-group">
-                              <label class="col-sm-2 col-sm-2 control-label">Categoria</label>
+                              <label class="col-sm-2 col-sm-2 control-label">Categoría</label>
                               <div class="col-sm-6">
                                   <!--styles/ui-bootstrap.css override a class so the background is gray-->
                                   <div ng-controller="ProductsCategoryModalCtrl"><!--Modal-->
