--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,13 +21,12 @@
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
                            <!-- {{awesomeThings[0]}} -->
 							<div class="weather-3 pn centered">
-								<i class="fa fa-sun-o"></i>
 								<h1>Standard</h1>
 								<div class="info">
 									<div class="row">
 								        <h3 class="centered">$10.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>No permite acceso a plataforma de marketing la cual facilita información estadística, pero puede ingresar 2 promociones.</p>
+											<p class="goleft" style="text-align: center">No permite acceso a plataforma de marketing la cual facilita información estadística, pero puede ingresar 2 promociones.</p>
 										</div>
 									</div>
 								</div>
@@ -37,13 +36,12 @@
                         <!-- Suscripcion 2 -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
 							<div class="weather-3 pn centered">
-								<i class="fa fa-sun-o"></i>
 								<h1>Profesional</h1>
 								<div class="info">
 									<div class="row">
 								        <h3 class="centered">$30.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>Acceso a la plataforma de marketing, así como a 5 categorias y                                                podrá ingresar hasta 10 promociones. </p>
+											<p class="goleft" style="text-align: center">Acceso a la plataforma de marketing, así como a 5 categorias y                                                podrá ingresar hasta 10 promociones. </p>
 										</div>
 									</div>
 								</div>
@@ -53,13 +51,12 @@
                         <!-- Suscripcion 3 -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
 							<div class="weather-3 pn centered">
-								<i class="fa fa-sun-o"></i>
 								<h1>Premium</h1>
 								<div class="info">
 									<div class="row">
 								        <h3 class="centered">$50.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center"><i class="fa fa-tint"></i>Tendrá acceso a la plataforma de marketing, a todas las                                                           categorías y podrá ingresar hasta 20  productos en promoción.</p>
+											<p class="goleft" style="text-align: center">Tendrá acceso a la plataforma de marketing, a todas las                                                           categorías y podrá ingresar hasta 20  productos en promoción.</p>
 										</div>
 									</div>
 								</div>
