--- a/app/views/subscription.html
+++ b/app/views/subscription.html
@@ -1,6 +1,6 @@
 
 <h3><i class="fa fa-angle-right"></i> Suscripciones </h3>
-<h5><i class="fa fa-angle-right"></i> Haz clic sobre el título de la suscripción de tu interés para obtener más información </h5>
+<h5>Haz clic sobre el título de la suscripción de tu interés para obtener más información </h5>
 <div class="row mt">
     <div class="col-lg-12">
 
